add background and prev to board model
